# DocGen-RAG

./: .gitignore  README.md  config.yaml  launch_phoenix.py  pyproject.toml  requirements.txt  settings.yml  setup.py  test_rag_cli.py
apis-test/django/: services.py  urls.py  views.py
apis-test/dotnet/: AuthController.cs  AuthService.cs  UserController.cs  UserService.cs
apis-test/fastapi/: auth.py  services.py  users.py
apis-test/nestjs/: arrow_auth.service.ts  auth.controller.ts  auth.service.ts  users.controller.ts  users.service.ts
apis-test/python-plain/: calculator.py  main.py  utils.py
apis-test/springboot/: AuthController.java  AuthService.java  UserController.java  UserService.java
src/api/: main.py
src/components/: ASTOutputChunker.py  CodeMapper.py  DocumentationCreator.py  LanguageFinder.py  WeaviateCodeWriter.py
src/components/extractor/: ast_extractor.py  base_extractor.py  csharp_extractor.py  java_extractor.py  python_extractor.py  typescript_extractor.py
src/components/extractor/queries/controllers/: c_sharp.scm  java.scm  python.scm  typescript.scm
src/core/: config.py  security.py
src/pipelines/: llm_factory.py  rag.py
src/services/: framework_detector.py  generator.py  input_handler.py
src/utils/: ast_extractor.py  ast_schema.py  json_loader.py  llm_json_handler.py  logging.py  modelGenerator.py  weaviate_utils.py
tests/: test_ast_schema.py  test_async_flow.py  test_documentation_creator.py  test_framework_detector.py  test_framework_finder.py  test_input_handler.py  test_language_finder.py  test_security.py
