[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "docgen-rag"
version = "0.1.0"
description = "A RAG-based documentation generator"
authors = [
    { name = "Ali Hasan", email = "ali1saleem1hasan@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "haystack-ai",
    "weaviate-haystack",
    "sentence-transformers",
    "gitpython",
    "pydantic-settings",
    "pyyaml",
    "python-multipart",
    "pytest",
    "httpx",
    "arize-phoenix>=4.0.0",
    "openinference-instrumentation-haystack",
    "ollama-haystack",
    "google-ai-haystack",
    "accelerate",
    "tree-sitter",
    "tree-sitter-language-pack"
]

[project.scripts]
ast-extractor = "src.components.extractor.ast_extractor:main"



[tool.setuptools]
packages = {find = {where = ["."]}}



[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]